fixed latest article snippet

--- a/src/content/articles/lessons-learned-form-app.mdx
+++ b/src/content/articles/lessons-learned-form-app.mdx
@@ -2,7 +2,7 @@
 draft: false
 title: 'Lessons learned: FormApp'
 snippet:
-    'Czy szukanie pomysłów na aplikację jest trudne? Niekoniecznie. Jestem pewien, że po chwili zastanowienia będziesz zmuszony wybrać jeden, który chcesz wdrożyć z puli kilkunastu. Pokażę Ci, w jaki sposób sam szukam inspiracji.'
+    'Pozornie prosty pomsył może szybko przekształcić się w potworka na którego nie chce się patrzeć. Na stół weźmiemy FormApp, prostą aplikację do tworzenia harmonogramów wizyt. Przedstawię Ci decyzje, które podjąłem podczas tworzenia tego projektu i pokażę, dlaczego uważam, że nie wszystkie były szczęśliwe.'
 publishDate: '2024-07-30'
 cover: { src: './lessons-learned-form-app-cover.jpg', alt: '' }
 ---
