fixed typos in article

--- a/src/content/articles/focus-w-css.mdx
+++ b/src/content/articles/focus-w-css.mdx
@@ -7,7 +7,7 @@ publishDate: '2024-09-18'
 cover: { src: './focus-w-css-cover.jpg', alt: '' }
 ---
 
-Rzadko kiedy słyszę, żeby ktoś lubił pisać CSS. Zazwyczaj kojarzy się on z przykrą koniecznością. Po części rozumiem, z czego to wynika. CSS posiada mnóstwo reguł i zasad, bez poznania których często będziemy chodzić po omacku. Wiesz na ile sposobów można stylować focus w CSS? Mamy *:focus*, *:focus-visible*, *:focus-within*... Do tego dochodzi np. *:active*, który często jest mylony z *:focus*. Nie wiem, czy odczaruję dla Ciebie CSS, ale przynajmniej poznasz bliżej kilka użytecznych selektorów.
+Rzadko kiedy słyszę, żeby ktoś lubił pisać CSS. Zazwyczaj kojarzy się on z przykrą koniecznością. Po części rozumiem, z czego to wynika. CSS posiada mnóstwo reguł i zasad, bez poznania których często będziemy chodzić po omacku. Wiesz, na ile sposobów można stylować focus w CSS? Mamy *:focus*, *:focus-visible*, *:focus-within*... Do tego dochodzi np. *:active*, który często jest mylony z *:focus*. Nie wiem, czy odczaruję dla Ciebie CSS, ale przynajmniej poznasz bliżej kilka użytecznych selektorów.
 
 Na ten moment skupmy się narazie na *:focus* i *:focus-visible*. Poniżej masz dwa przyciski. Do ostylowania pierwszego wykorzystałem *:focus* a w drugim *:focus-visible*.
 
@@ -29,7 +29,7 @@ button:focus-visible {
 }
 ```
 
-Kiedy naciśniesz pierwszy, obramowanie podświetli się na czerwono i zostanie tak dopóki nie zmieni się focus. A co się stanie po naciśnięciu drugiego? Absolutnie nic. Cała magia zadzieje się kiedy spróbujesz przejść przez oba przyciski za pomocą klawisza Tab. Dopiero wtedy obramowanie drugiego przycisku podświetli się na czerwono. Dzieje się tak, ponieważ style dla *:focus-visible* są aplikowane tylko i wyłącznie wtedy, kiedy przeglądarka uzna, że jest to konieczne. Zazwyczaj nie chcemy, żeby przycisk został podświetlony, kiedy już na niego klikneliśmy. **Dlatego śmiało można stwierdzić, że domyślnie powinniśmy sięgać po *:focus-visible*, a nie *:focus*.**
+Kiedy naciśniesz pierwszy, obramowanie podświetli się na czerwono i zostanie tak, dopóki nie zmieni się focus. A co się stanie po naciśnięciu drugiego? Absolutnie nic. Cała magia zadzieje się kiedy spróbujesz przejść przez oba przyciski za pomocą klawisza Tab. Dopiero wtedy obramowanie drugiego przycisku podświetli się na czerwono. Dzieje się tak, ponieważ style dla *:focus-visible* są aplikowane tylko wtedy, kiedy przeglądarka uzna, że jest to konieczne. Zazwyczaj nie chcemy, żeby przycisk został podświetlony, kiedy już na niego kliknęliśmy. **Dlatego śmiało można stwierdzić, że domyślnie powinniśmy sięgać po *:focus-visible*, a nie *:focus*.**
 
 A jak ma się do tego selektor *:active*? Zobaczmy.
 
@@ -65,7 +65,7 @@ W tym momencie pozostaje nam skupić się na *:focus-within*. Załóżmy, że tw
 	</label>
 ```
 
-Oczywiście w tym wypadku moglibyśmy rozwiązać to przy pomocy innej struktury i innych selektorów, ale nie zawsze mamy taką opcję. W zanadrzu mamy jeszcze jeden selektor, który mniej więcej od 2023 roku jest wspierany przez większość przeglądarek. Mowa tutaj o *:has*. Zobaczmy w jaki sposób moglibyśmy z niego skorzystać.
+Oczywiście w tym wypadku moglibyśmy rozwiązać to przy pomocy innej struktury i innych selektorów, ale nie zawsze mamy taką opcję. W zanadrzu mamy jeszcze jeden selektor, który mniej więcej od 2023 roku jest wspierany przez większość przeglądarek. Mowa tutaj o *:has*. Zobaczmy, w jaki sposób moglibyśmy z niego skorzystać.
 
 <label class="has-[input:focus-visible]:font-bold flex flex-col p-0 gap-1">Adres e-mail<input class="border"/></label>
 
@@ -82,7 +82,7 @@ Oczywiście w tym wypadku moglibyśmy rozwiązać to przy pomocy innej struktury
 	</label>
 ```
 
-Dużo się nie zmieniło, prawda? Zwróć uwagę, że semantyka w przypadku *:has* i *:focus-within* jest dokładnie taka sama. Najważniejsza różnica to to, że *:has* to selektor-rodzic. To tak jakbyś powiedział - zmień etykietę jeżeli pole tekstowe ma aktywny focus. W każdym razie, *:has* to temat na osobny wpis. Zdecydowanie warto się z nim zapoznać i pamiętać o nim, bo pozwala zmienić podejście do CSS o 180 stopni.
+Dużo się nie zmieniło, prawda? Zwróć uwagę, że semantyka w przypadku *:has* i *:focus-within* jest dokładnie taka sama. Najważniejsza różnica to to, że *:has* to selektor-rodzic. To tak jakbyś powiedział - zmień etykietę, jeżeli pole tekstowe ma aktywny focus. W każdym razie *:has* to temat na osobny wpis. Zdecydowanie warto się z nim zapoznać i pamiętać o nim, bo pozwala zmienić podejście do CSS o 180 stopni.
 
 I pamiętaj...
 
