added new article, minor fixes

--- a/src/content/articles/focus-w-css.mdx
+++ b/src/content/articles/focus-w-css.mdx
@@ -4,7 +4,7 @@ title: 'Focus w CSS'
 snippet:
     'Zastanawiałeś się kiedyś w jaki sposób poprawnie ostylować focus w CSS? Co robi :focus-within i po co mi :focus-visible? :active czy :focus? A może jeszcze :has... To prostsze niż Ci się wydaje!'
 publishDate: '2024-09-18'
-cover: { src: './focus-w-css-cover.jpg', alt: '' }
+cover: { src: './focus-w-css-cover.webp', alt: '' }
 ---
 
 Rzadko kiedy słyszę, żeby ktoś lubił pisać CSS. Zazwyczaj kojarzy się on z przykrą koniecznością. Po części rozumiem, z czego to wynika. CSS posiada mnóstwo reguł i zasad, bez poznania których często będziemy chodzić po omacku. Wiesz, na ile sposobów można stylować focus w CSS? Mamy *:focus*, *:focus-visible*, *:focus-within*... Do tego dochodzi np. *:active*, który często jest mylony z *:focus*. Nie wiem, czy odczaruję dla Ciebie CSS, ale przynajmniej poznasz bliżej kilka użytecznych selektorów.
