--- a/src/content/articles/jak-szukac-pomyslow.mdx
+++ b/src/content/articles/jak-szukac-pomyslow.mdx
@@ -4,12 +4,12 @@ title: 'Jak szukać pomysłów?'
 snippet:
     'Czy szukanie pomysłów na aplikację jest trudne? Niekoniecznie. Jestem pewien, że po chwili zastanowienia będziesz zmuszony wybrać jeden, który chcesz wdrożyć z puli kilkunastu. Pokażę Ci, w jaki sposób sam szukam inspiracji.'
 publishDate: '2024-07-17'
-cover: { src: './jak-szukac-pomyslow-cover.jpg', alt: '' }
+cover: { src: './jak-szukac-pomyslow-cover.webp', alt: '' }
 ---
 import { Image } from 'astro:assets';
-import notebook from './jak-szukac-pomyslow-1.jpg';
-import finansoholik from './jak-szukac-pomyslow-2.png';
-import directions from './jak-szukac-pomyslow-3.png';
+import notebook from './jak-szukac-pomyslow-1.webp';
+import finansoholik from './jak-szukac-pomyslow-2.webp';
+import directions from './jak-szukac-pomyslow-3.webp';
 
 Przez kilka lat prowadziłem zeszyt z wydatkami. Tak naprawdę nie jeden, a już któryś z kolei. Założenie jest proste - podliczam paragony, rozpisuję wydatki i wpływy do odpowiednich kategorii, tworzę podsumowania miesiąca, kwartału oraz roku. Jestem oszczędzną osobą i chcę na bieżąco znać swoją sytuację finansową. Takie rozwiązanie - chociaż się sprawdzało - miało kilka istotnych wad. Zaglądałem tam tylko po to, żeby przeanalizować podsumowanie miesiąca. Raz wpisany paragon zostawał tam na zawsze i nigdy do niego nie wracałem. Tyle danych, które możnaby zwizualizować w ciekawy sposób leżało odłogiem. Nie pomagała również ilość czasu którą trzeba poświęcić, żeby wszystko uzupełnić i podliczyć.
 
