fixed more typos

--- a/src/content/articles/konfiguracja-a-kompozycja.mdx
+++ b/src/content/articles/konfiguracja-a-kompozycja.mdx
@@ -2,7 +2,7 @@
 draft: false
 title: 'Konfiguracja a kompozycja'
 snippet:
-    'W tym artykule dowiesz się, jak tworzyć bardziej elastyczne i łatwiejsze w utrzymaniu komponenty w React. Zobaczysz jak modularność kodu może uprosćic rozwój aplikacji i że nie zawsze jest to jedyne słuszne wyjście.'
+    'W tym artykule dowiesz się, jak tworzyć bardziej elastyczne i łatwiejsze w utrzymaniu komponenty w React. Zobaczysz jak modularność kodu może uprościć rozwój aplikacji i że nie zawsze jest to jedyne słuszne wyjście.'
 publishDate: '2024-10-10'
 cover: { src: './konfiguracja-a-kompozycja-cover.webp', alt: '' }
 ---
