--- a/src/content/articles/o-edytorach-vimie-i-qmk.mdx
+++ b/src/content/articles/o-edytorach-vimie-i-qmk.mdx
@@ -7,19 +7,19 @@ publishDate: '2024-11-14'
 cover: { src: './o-edytorach-vimie-i-qmk-cover.webp', alt: '' }
 ---
 
-Modalne edytory, to najlepszy sposób edycji kodu, koniec kropka. Takie było moje zdanie po chwili korzystania z Neovima. Błyskawiczne poruszanie się po pliku przy użyciu samej klawiatury uzależnia. Ciężko jest odejść od tego sposobu edycji tekstu, jeżeli dało mu się szansę chociaż na chwilę. Sam jednak zrezygnowałem z Neovima pomimo kilku prób. Dlaczego?
+Modalne edytory to najlepszy sposób edycji kodu, koniec kropka. Takie było moje zdanie po chwili korzystania z Neovima. Błyskawiczne poruszanie się po pliku przy użyciu samej klawiatury uzależnia. Ciężko jest odejść od tego sposobu edycji tekstu, jeżeli dało mu się szansę chociaż na chwilę. Sam jednak zrezygnowałem z Neovima pomimo kilku prób. Dlaczego?
 
 ## Konfiguracja
 
-Żeby zmniejszyć trochę próg wejścia jako bazę do własnej konfiguracji wykorzystałem [kickstart.nvim](https://github.com/nvim-lua/kickstart.nvim). Wypróbowałem też jedną gotową dystrybucję - [LazyVim](https://www.lazyvim.org/), ale miałem nieodparte wrażenie, że nie działa tak płynnie, jak moja własna konfiguracja. Dałem sobie trochę czasu na przestawienie i... nie wyszło. Kiedy zreflektowałem się, że straciłem kolejną godzinę na próbie skonfigurowania relatywnie prostych rzeczy zwątpiłem. Gotowy panel ustawień dostępny w większości edytorów jest naprawdę dużym plusem. Decydując się na korzystanie z Vima musimy mieć świadomość, że spędzimy sporo czasu na dłubaniu w plikach konfiguracyjnych. Wiem, ma to jednocześnie mnóstwo zalet - poznasz zasadę działania edytora, będziesz mógł go skonfigurować w pełni pod siebie itd. Pozostaje odpowiedzieć sobie na pytanie jakie masz w danej chwili priorytety. Chcesz się skupić na kodzie, czy na edytorze?
+Żeby zmniejszyć trochę próg wejścia jako bazę do własnej konfiguracji wykorzystałem [kickstart.nvim](https://github.com/nvim-lua/kickstart.nvim). Wypróbowałem też jedną gotową dystrybucję - [LazyVim](https://www.lazyvim.org/), ale miałem nieodparte wrażenie, że nie działa tak płynnie jak moja własna konfiguracja. Dałem sobie trochę czasu na przestawienie i... nie wyszło. Kiedy zreflektowałem się, że straciłem kolejną godzinę na próbie skonfigurowania relatywnie prostych rzeczy zwątpiłem. Gotowy panel ustawień dostępny w większości edytorów jest naprawdę dużym plusem. Decydując się na korzystanie z Vima musimy mieć świadomość, że spędzimy sporo czasu na dłubaniu w plikach konfiguracyjnych. Wiem, ma to jednocześnie mnóstwo zalet - poznasz zasadę działania edytora, będziesz mógł go skonfigurować w pełni pod siebie itd. Pozostaje odpowiedzieć sobie na pytanie jakie masz w danej chwili priorytety. Chcesz się skupić na kodzie, czy na edytorze?
 
 ## Przyzwyczajenia
 
-Nawyki i przyzwyczajenia są potężne i trudno je przełamać. Przez cały czas korzystania z Neovima czułem się, jakbym miał mały kamyk w wygodnym bucie. Poruszanie się po plikach? Genialne! Rozwiązywanie konfliktów w Git? Wybaczcie, Visual Studio Code robi to zwyczajnie lepiej. Próbowałem korzystać z polecanego [lazygita](https://github.com/jesseduffield/lazygit) ale cały czas to nie było to. Rzeczy które mi przeszkadzały były zazwyczaj drobiazgami, ale w połączeniu z zawiłą konfiguracją sprawiały, że coraz bardziej się zniechęcałem. Pomimo tego, że chciałem, żeby było odwrotnie.
+Nawyki i przyzwyczajenia są potężne i trudno je przełamać. Przez cały czas korzystania z Neovima czułem się, jakbym miał mały kamyk w wygodnym bucie. Poruszanie się po plikach? Genialne! Rozwiązywanie konfliktów w Git? Wybaczcie, Visual Studio Code robi to zwyczajnie lepiej. Próbowałem korzystać z polecanego [lazygita](https://github.com/jesseduffield/lazygit), ale cały czas to nie było to. Rzeczy, które mi przeszkadzały były zazwyczaj drobiazgami, ale w połączeniu z zawiłą konfiguracją sprawiały, że coraz bardziej się zniechęcałem. Pomimo tego, że chciałem, żeby było odwrotnie.
 
 ## Emulatory
 
-Jeżeli nie Neovim, to może coś innego? W Visual Studio Code są co najmniej dwie wtyczki emulujące Vima. JetBrains ma IdeaVim. Może warto spróbować? Zwłaszcza, że dosłownie przed chwilą Webstorm został [udostępniony za darmo](https://blog.jetbrains.com/blog/2024/10/24/webstorm-and-rider-are-now-free-for-non-commercial-use/) do użytku prywatnego. W teorii połączenie tego co najlepsze z obu światów, prawda? W moim odczuciu niekoniecznie. Prędzej czy później coś zaczyna zgrzytać. Przykład z Webstorma - używając IdeaVim można zapomnieć o używaniu kilku kursorów naraz. Wiem, że Neovim ma makra ale znowu - przyzwyczajenia. Być może nie dałem sobie wystarczającej ilości czasu, żeby przekonać się do tego typu rozwiązań ale w moim odczuciu jest to próba zrobienia z edytora/IDE czegoś czym nie jest.
+Jeżeli nie Neovim, to może coś innego? W Visual Studio Code są co najmniej dwie wtyczki emulujące Vima. JetBrains ma IdeaVim. Może warto spróbować? Zwłaszcza, że dosłownie przed chwilą Webstorm został [udostępniony za darmo](https://blog.jetbrains.com/blog/2024/10/24/webstorm-and-rider-are-now-free-for-non-commercial-use/) do użytku prywatnego. W teorii połączenie tego co najlepsze z obu światów, prawda? W moim odczuciu niekoniecznie. Prędzej czy później coś zaczyna zgrzytać. Przykład z Webstorma - używając IdeaVim można zapomnieć o używaniu kilku kursorów naraz. Wiem, że Neovim ma makra ale znowu - przyzwyczajenia. Być może nie dałem sobie wystarczającej ilości czasu, żeby przekonać się do tego typu rozwiązań, ale w moim odczuciu jest to próba zrobienia z edytora/IDE czegoś czym nie jest.
 
 ## QMK
 
